# minimal-cmake-project

./: CMakeLists.txt  README.md
.github/workflows/: linting.yml
source/: CMakeLists.txt  main.cpp
